@@ -92,6 +92,7 @@
 	* Changed jQuery UI CSS to v1.8.17
 	* Added tx_solr_Search::getRangeFacetFieldOptions()
 	* Added support for filter parser regisration and retrieval through tx_solr_facet_FacetRendererFactory
+	* Added support for facet type configuration dependent filter parsers in tx_solr_query_modifier_Faceting
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
